src/Pseint.java
/* Generated By:JavaCC: Do not edit this line. Pseint.java */
package src;
import java.util.ArrayList;
import src.TablaIdentificadores;
public class Pseint implements PseintConstants {

        static ArrayList<String> tabla = PseintTokenManager.tabla;
        public static void main(String[] args) {
            try{
                Pseint pseint = new Pseint(System.in);
                pseint.programa();

                if(tabla.size() != 0){
                    System.out.println("ERRORES PROGRAMA");
                    System.out.println("=================");
                    for(String i:tabla){
                        System.out.println(i);
                    }
                }else{
                    System.out.println("\nCompilacion completada con exito");

                }
              }catch(Exception e){
                System.out.println(e.getMessage());
              }
          }

// Gramaticas

//CAMBIO: Nuestro programa puede no tener sentencias entre Algoritmo y FinAlgoritmo
  final public void programa() throws ParseException {
    try {
      jj_consume_token(INICIO);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEER:
        case ESCRIBIR:
        case DEFINIR:
        case INICIO_CICLO_PARA:
        case INICIO_CICLO_MIENTRAS:
        case INICIO_CICLO_REPETIR:
        case INICIO_CONDICIONAL_SI:
        case INICIO_CONDICIONAL_SEGUN:
        case VARIABLE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        sentencias();
      }
      jj_consume_token(FIN);
                TablaIdentificadores.mostrarTabla();
    } catch (ParseException e) {
            Token t;
            do{
                t=getNextToken();
            }while(t.kind != EOF);
            tabla.add("Parser Error:" + e.getMessage());
    }
  }

  final public void sentencias() throws ParseException {
    TablaIdentificadores.inicializarTipos();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      sentenciaAsignacion();
      break;
    case DEFINIR:
      sentenciaDeclaracionVariables();
      break;
    case LEER:
      leerDato();
      break;
    case ESCRIBIR:
      imprimirDato();
      break;
    case INICIO_CONDICIONAL_SI:
      sentenciaSi();
      break;
    case INICIO_CONDICIONAL_SEGUN:
      sentenciaSegun();
      break;
    case INICIO_CICLO_PARA:
      sentenciaPara();
      break;
    case INICIO_CICLO_REPETIR:
      sentenciaRepetir();
      break;
    case INICIO_CICLO_MIENTRAS:
      sentenciaMientras();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//ASIGNACION DE VALOR
//Aqui hay un problema
  final public void sentenciaAsignacion() throws ParseException {
    Token identificador = new Token();
    Token asignado = new Token();
    try {
      jj_consume_token(VARIABLE);
                    //EXISTENCIA DE IDENTIFICADORES
                    // Sino existe el id, lo guardamos en nuestra arreglo de errores
                     if(!TablaIdentificadores.checkExistenciaId(token)){
                           tabla.add("The indentifier: " + token.image + " doesn't exist, at line:" +
                                   token.beginLine + " column:" + token.beginColumn);
                     }else{
                        identificador = token;
                     }
      asignado = asignacion();
                            //Se evalua si se esta asignando el tipo correcto al identificador
                       //System.out.println("identificador: " + identificador.image);
                       //System.out.println("asignado: " + asignado.image);
                      if(!TablaIdentificadores.verifiacionConToken(identificador,asignado)){
                                tabla.add("The token: " + asignado.image + " doesn't correspond to the:" +
                                            TablaIdentificadores.obtenerTipo(identificador) + " type");
                          }
      jj_consume_token(DELIMITADOR);
    } catch (ParseException e) {
        //System.out.println(e.toString());
        Token t;
        do{
            t=getNextToken();
        }while(t.kind != DELIMITADOR);
        tabla.add("Parser error:" + e.getMessage());
    }
  }

//Probar manejo de errores
  final public void sentenciaDeclaracionVariables() throws ParseException {
    try {
      declaracionVariables();
      jj_consume_token(DELIMITADOR);
    } catch (ParseException e) {
            //System.out.println(e.toString());
            Token t;
            do{
                t=getNextToken();
                //VERIFICAR ERROR DE PUNTO Y COMA AL FINAL
            }while(t.kind != DELIMITADOR);
            tabla.add("Parser error:" + e.getMessage());
    }
  }

//CAMBIAMOS el tipo de dato retornado a token
  final public Token constantes() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMERO_ENTERO:
      jj_consume_token(NUMERO_ENTERO);
                     {if (true) return token;}
      break;
    case NUMERO_DECIMAL:
      jj_consume_token(NUMERO_DECIMAL);
                         {if (true) return token;}
      break;
    case CADENA_TEXTO:
      jj_consume_token(CADENA_TEXTO);
                      {if (true) return token;}
      break;
    case CARACTER_TEXTO:
      jj_consume_token(CARACTER_TEXTO);
                        {if (true) return token;}
      break;
    case BOOLEANO_FALSO:
      jj_consume_token(BOOLEANO_FALSO);
                        {if (true) return token;}
      break;
    case BOOLEANO_VERDADERO:
      jj_consume_token(BOOLEANO_VERDADERO);
                            {if (true) return token;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//ASIGNACION CORRECTA DE VALORES
  final public Token asignacion() throws ParseException {
                    Token asignado = new Token();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
      jj_consume_token(ASIGNACION);
      break;
    case ASIGNACION_COMPUESTA:
      jj_consume_token(ASIGNACION_COMPUESTA);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    asignado = condicion();
                                                                    {if (true) return asignado;}
    throw new Error("Missing return statement in function");
  }

  final public Token condicion() throws ParseException {
                   Token asignado = new Token();
    asignado = operacion();
                          {if (true) return asignado;}
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OPERADOR_IGUAL:
      case OPERADOR_DIFERENTE:
      case OPERADOR_MAYOR:
      case OPERADOR_MENOR:
      case OPERADOR_MAYOR_IGUAL:
      case OPERADOR_MENOR_IGUAL:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      operadoresRelacionales();
      operacion();
    }
    throw new Error("Missing return statement in function");
  }

  final public Token operacion() throws ParseException {
    Token t = new Token();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LOGICO_NOT:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      jj_consume_token(LOGICO_NOT);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      jj_consume_token(VARIABLE);
                                     //EXISTENCIA DE IDENTIFICADORES
                                    // Sino existe el id, lo guardamos en nuestra arreglo de errores
                                    if(!TablaIdentificadores.checkExistenciaId(token)){
                                        tabla.add("The indentifier: " + token.image + " doesn't exist, at line:" +
                                                    token.beginLine + " column:" + token.beginColumn);
                                    }else{
                                        t=token;
                                    }
      break;
    case CADENA_TEXTO:
    case CARACTER_TEXTO:
    case NUMERO_ENTERO:
    case NUMERO_DECIMAL:
    case BOOLEANO_FALSO:
    case BOOLEANO_VERDADERO:
      t = constantes();
      break;
    case PAREN_ABIERTO:
      operacionParentesis();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
      case RESTA:
      case MULTIPLICACION:
      case DIVISION:
      case MODULO:
      case LOGICO_AND:
      case LOGICO_OR:
      case OPERADOR_IGUAL:
      case OPERADOR_DIFERENTE:
      case OPERADOR_MAYOR:
      case OPERADOR_MENOR:
      case OPERADOR_MAYOR_IGUAL:
      case OPERADOR_MENOR_IGUAL:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      operadores();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOGICO_NOT:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        jj_consume_token(LOGICO_NOT);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        jj_consume_token(VARIABLE);
                                                     //EXISTENCIA DE IDENTIFICADORES
                                                     // Sino existe el id, lo guardamos en nuestra arreglo de errores
                                                        if(!TablaIdentificadores.checkExistenciaId(token)){
                                                            tabla.add("The indentifier: " + token.image + " doesn't exist, at line:" +
                                                            token.beginLine + " column:" + token.beginColumn);
                                                        }
        break;
      case CADENA_TEXTO:
      case CARACTER_TEXTO:
      case NUMERO_ENTERO:
      case NUMERO_DECIMAL:
      case BOOLEANO_FALSO:
      case BOOLEANO_VERDADERO:
        t = constantes();
        break;
      case PAREN_ABIERTO:
        operacionParentesis();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  final public void operacionParentesis() throws ParseException {
    jj_consume_token(PAREN_ABIERTO);
    operacion();
    jj_consume_token(PAREN_CERRADO);
  }

  final public void operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUMA:
    case RESTA:
    case MULTIPLICACION:
    case DIVISION:
    case MODULO:
      operadoresAritmeticos();
      break;
    case LOGICO_AND:
    case LOGICO_OR:
      operadoresLogicos();
      break;
    case OPERADOR_IGUAL:
    case OPERADOR_DIFERENTE:
    case OPERADOR_MAYOR:
    case OPERADOR_MENOR:
    case OPERADOR_MAYOR_IGUAL:
    case OPERADOR_MENOR_IGUAL:
      operadoresRelacionales();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void operadoresAritmeticos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUMA:
      jj_consume_token(SUMA);
      break;
    case RESTA:
      jj_consume_token(RESTA);
      break;
    case MULTIPLICACION:
      jj_consume_token(MULTIPLICACION);
      break;
    case DIVISION:
      jj_consume_token(DIVISION);
      break;
    case MODULO:
      jj_consume_token(MODULO);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void operadoresRelacionales() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPERADOR_IGUAL:
      jj_consume_token(OPERADOR_IGUAL);
      break;
    case OPERADOR_DIFERENTE:
      jj_consume_token(OPERADOR_DIFERENTE);
      break;
    case OPERADOR_MAYOR:
      jj_consume_token(OPERADOR_MAYOR);
      break;
    case OPERADOR_MAYOR_IGUAL:
      jj_consume_token(OPERADOR_MAYOR_IGUAL);
      break;
    case OPERADOR_MENOR:
      jj_consume_token(OPERADOR_MENOR);
      break;
    case OPERADOR_MENOR_IGUAL:
      jj_consume_token(OPERADOR_MENOR_IGUAL);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void operadoresLogicos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LOGICO_AND:
      jj_consume_token(LOGICO_AND);
      break;
    case LOGICO_OR:
      jj_consume_token(LOGICO_OR);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//DECLARACION DE VARIABLES:COMPROBACION DE TIPOS
  final public void declaracionVariables() throws ParseException {
    Token identificador = new Token();
    Token asignado = new Token();
    String tipoDato = "";
    jj_consume_token(DEFINIR);
    tipoDato = tiposDato();
    jj_consume_token(VARIABLE);
                        if(TablaIdentificadores.checkExistenciaId(token)){
                            System.out.println("Ya existe el token: " + token.image);
                            tabla.add("The identifier: " + token.image + " already exist, at line: " + token.beginLine + " column:" + token.endColumn);
                        }else{
                            TablaIdentificadores.insertarIdentificadores(token,tipoDato);
                            identificador = token;
                        }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASIGNACION:
    case ASIGNACION_COMPUESTA:
      asignado = asignacion();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
                               //Se evavlua si se esta asignando el tipo correcto al identificador
                    if(asignado.kind != 0){
                              System.out.println("identificador: " + identificador.image);
                              System.out.println("asignado: " + asignado.image);
                                  if(!TablaIdentificadores.verifiacionConToken(identificador,asignado)){
                                      tabla.add("The token: " + asignado.image + " doesn't correspond to the:" +
                                        TablaIdentificadores.obtenerTipo(identificador) + " type");
                                  }
                          }
  }

  final public String tiposDato() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTERO:
      jj_consume_token(ENTERO);
              {if (true) return token.image;}
      break;
    case FLOTANTE:
      jj_consume_token(FLOTANTE);
                  {if (true) return token.image;}
      break;
    case CADENA:
      jj_consume_token(CADENA);
                {if (true) return token.image;}
      break;
    case CARACTER:
      jj_consume_token(CARACTER);
                 {if (true) return token.image;}
      break;
    case BOOLEANO:
      jj_consume_token(BOOLEANO);
                  {if (true) return token.image;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void leerDato() throws ParseException {
    jj_consume_token(LEER);
    jj_consume_token(VARIABLE);
    jj_consume_token(DELIMITADOR);
  }

  final public void imprimirDato() throws ParseException {
    if (jj_2_1(3)) {
      jj_consume_token(ESCRIBIR);
      jj_consume_token(CADENA_TEXTO);
      jj_consume_token(DELIMITADOR);
    } else if (jj_2_2(3)) {
      jj_consume_token(ESCRIBIR);
      jj_consume_token(CADENA_TEXTO);
      jj_consume_token(COMA);
      jj_consume_token(VARIABLE);
      jj_consume_token(DELIMITADOR);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ESCRIBIR:
        jj_consume_token(ESCRIBIR);
        jj_consume_token(VARIABLE);
        jj_consume_token(DELIMITADOR);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void sentenciaSi() throws ParseException {
    try {
      jj_consume_token(INICIO_CONDICIONAL_SI);
      condicion();
      jj_consume_token(ENTONCES);
      label_6:
      while (true) {
        sentencias();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LEER:
        case ESCRIBIR:
        case DEFINIR:
        case INICIO_CICLO_PARA:
        case INICIO_CICLO_MIENTRAS:
        case INICIO_CICLO_REPETIR:
        case INICIO_CONDICIONAL_SI:
        case INICIO_CONDICIONAL_SEGUN:
        case VARIABLE:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_6;
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONDICIONAL_SINO:
        jj_consume_token(CONDICIONAL_SINO);
        label_7:
        while (true) {
          sentencias();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LEER:
          case ESCRIBIR:
          case DEFINIR:
          case INICIO_CICLO_PARA:
          case INICIO_CICLO_MIENTRAS:
          case INICIO_CICLO_REPETIR:
          case INICIO_CONDICIONAL_SI:
          case INICIO_CONDICIONAL_SEGUN:
          case VARIABLE:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_7;
          }
        }
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      jj_consume_token(FIN_CONDICIONAL_SI);
    } catch (ParseException e) {
        Token t;
        do{
            t=getNextToken();
        }while(t.kind != FIN_CONDICIONAL_SI);
        tabla.add("Parser error:" + e.getMessage());
    }
  }
